--- a/src/main/resources/webapp/events-display.html
+++ b/src/main/resources/webapp/events-display.html
@@ -5,16 +5,22 @@
     <title>World's earthquakes</title>
     <style>
         html, body { height: 100%; margin: 0; padding: 0; }
-        #map { height: 100%; }
+        #map { width: 100%; height: 100%}
 
     </style>
     <script src="js/jquery-2.1.4.js"></script>
 
     <script src="js/app.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
     <h2>Earthquakes in the last month</h2>
+    <div>
+        <textarea readonly="true" id="timeline" cols="500" rows="10">
+
+        </textarea>
+    </div>
     <div id="map"></div>
 
 <script>
@@ -33,18 +39,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDV72ZiRPSb-3q0AAoDHlO0uLslvSYuBOk&libraries=visualization&callback=initMap">
 </script>
 <script>
-    //    var liveData = new WebSocket("ws://localhost:8080/country-counts");
-//    liveData.onopen = function(event) {
-//        console.log("Connected!", event);
-//    };
-//    liveData.onmessage = function(event) {
-//        var data = JSON.parse(event.data);
-//        var content = $.map(data, function (elem) {
-//            var flagPath = "flags/" + elem[0] + ".png";
-//            return '<tr><td><img src="' + flagPath + '" /></td><td>' + elem[0] + '</td><td>' + elem[1] + '</td></tr>';
-//        });
-//        $("table").html("<tr><th>Country</th><th>Code</th><th>Count</th></tr>" + content.join());
-//    };
+
 </script>
 
 </body>
