--- a/src/main/resources/webapp/events-display.html
+++ b/src/main/resources/webapp/events-display.html
@@ -24,20 +24,19 @@
 <body>
 
     <h2>Earthquakes in the last month</h2>
+
+    <div id="map" style="height: 60%"></div>
+    <div id="timeseries" class="timeseries"></div>
     <div>
         <textarea readonly="true" id="timeline" cols="500" rows="10">
-
         </textarea>
     </div>
-    <div id="timeseries" class="timeseries"></div>
-
-    <div id="map"></div>
 
 <script>
     var map;
     function initMap() {
         gmap = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: -34.397, lng: 150.644},
+            center: {lat: 25.454, lng: -177.617},
             zoom: 2
         });
         initialize(gmap);
